--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pure Reason Example</title>
+  <title>Statechart</title>
 </head>
 <body>
   <div id="index"></div>
-  <script src="../../bundledOutputs/simple.js"></script>
 </body>
 </html>
